/**
 * 信用卡授權結果DTO
 */
export interface AuthResultDTO {
    code: number; // 授權回應碼
    message: string; // 回應訊息
}